# North-Star

./: .claudeignore  .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml  requirements.txt  streamlit_app.py
.claude/: context-transfer.md
.github/workflows/: ci.yml  refresh_roles.yml
course/: Hackathon Rules.docx
evaluation/: eval_cases.json  golden_dataset.json
specs/: Architecture_North_Star.md  PRD_North_Star.md  architecture.dot
specs/scenarios/: high_risk_flows.feature
src/: main.py
src/agents/: coaching_pace_agent.py  research_outline_agent.py
src/cron/: refresh_roles.py
src/data/: cross_validation.py  grounding_fallback.py  himalayas_parser.py  himalayas_relevance.py  outline_topics.py  pace_snapshots.py  patch_notes.py  progress_log.py  roles_cache.py  tavily_parser.py  users.py  verification_log.py
src/db/: connection.py  (+1 more)
tests/: conftest.py  spike_grounding_connectivity.py  test_adk_runtime.py  test_coaching_pace_agent.py  test_connection.py  test_create_schema.py  test_cross_validation.py  test_gemini_client.py  test_grounding_fallback.py  test_hierarchy.py  test_himalayas_parser.py  test_himalayas_relevance.py  test_input_gate.py  test_main.py  test_outline_topics.py  test_output_guard.py  test_pace_calculator.py  test_pace_snapshots.py  test_patch_manager.py  test_patch_notes.py  test_pipeline_integration.py  test_refresh_roles.py  test_research_grounding.py  test_research_outline_agent.py  test_roles_cache.py  test_significant_event.py  test_tavily_parser.py  test_users.py  test_verification_skill.py
(+23 files in other folders)
